# omop_etl

./: .dockerignore  .gitignore  .nojekyll  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile.merge  README.md  _quarto.yml  appendix_A.qmd  appendix_B.qmd  appendix_C.qmd  clinical_data_tables.qmd  connection_duckdb.json  connection_postgres.json  conventional_mapping.qmd  docker-compose.yml  index.html  index.qmd  mapping_overview.qmd  merge_etl.qmd  omop_test  postgresql.conf  pyproject.toml  pytest.ini  references.bib  requirements.dev.txt  requirements.txt  search.json  setup.cfg  site_etl.qmd  stem_mapping.qmd  styles.css  technical_infrastructure.qmd
.github/workflows/: docker.yml  linting.yml  publish.yml  pytest.yml
docker/: entrypoint.merge.sh  entrypoint.sh  stage_registries_to_duckdb.sh  stage_source_schema_to_duckdb.sh  stage_vocab_to_duckdb.sh
docs/: .gitignore  _quarto.yml  appendix_A.qmd  appendix_B.qmd  clinical_data_tables.qmd  custom.sty  docs.Rproj  health_system_data_tables.qmd  index.qmd  mapping_overview.qmd  metadata_tables.qmd  semantic_mapping.qmd  standardized_derived_elements.qmd  stem_mapping.qmd  styles.css  vocabularies.qmd
etl/: __init__.py  common.py  loader.py  process.py
etl/csv/: __init__.py  concept_lookup.csv  concept_lookup_stem.csv  drug_mapping_helper.csv  lookups.py  mapping_lookup.csv  shak_lookup.csv  shak_lookup.tsv
etl/models/: modelutils.py  source.py  tempmodels.py
etl/sql/: __init__.py  care_site.py  cdm_summary.py  condition_era.py  condition_occurrence.py  death.py  era.sql  (+17 more)
tests/: processtests.py  testsuite.py  testutils.py
(+202 files in other folders)
