[metadata]
name = Rigshospitalet etl
version = 0.0.1
author = edenceHealth
description = The Rigshospitalet ETL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/edencehealth/rigshospitalet_etl
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = etl
packages = find:
python_requires = >=3.6

[options.packages.find]
where = etl

[flake8]
ignore=E203,E266,E501,W503
max-line-length=88
max-complexity=18
select=B,C,E,F,W,T4
exclude=.git,venv,__pycache__

[pylint.format]
max-line-length=88

[isort]
force_grid_wrap=0
include_trailing_comma=True
line_length=80
multi_line_output=3
profile=black
use_parentheses=True
combine_as_imports=True

[mypy]
files=*.py
ignore_missing_imports=true

[tool:pytest]
testpaths=tests/
addopts = --ignore setup.py --ignore tests/testsuite.py --color=yes
python_files = test*.py *test.py
norecursedirs = .* build dist {arch} *.egg data out .wrk
python_classes=Test*
python_functions=test*
